parser.output
Terminals unused in grammar

   TW_INT
   TW_BYTE
   TW_CHAR
   TW_STRING
   TR_INT
   TR_BYTE
   TR_CHAR
   TR_STRING
   T_EXNTEND
   T_SHRINK
   T_STRLEN
   T_STRCMP
   T_STRCPY
   T_STRCAT
   "print"
   IF_PART
   NO_ELSE


State 126 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: func_def

    2 func_def: T_id '(' ')' ':' r_type local_def_help compound_stmt
    3         | T_id '(' fpar_list ')' ':' r_type local_def_help compound_stmt

    4 local_def_help: %empty
    5               | local_def_help local_def

    6 fpar_list: fpar_def fpar_def_help

    7 fpar_def_help: %empty
    8              | ',' fpar_def fpar_def_help

    9 fpar_def: T_id ':' type
   10         | T_id ':' TREFERENCE type

   11 data_type: TINT
   12          | TBYTE

   13 type: data_type
   14     | data_type '[' ']'

   15 r_type: data_type
   16       | "proc"

   17 local_def: func_def
   18          | var_def

   19 var_def: T_id ":" data_type
   20        | T_id ":" data_type '[' T_INT_CONST ']'

   21 stmt: ';'
   22     | l_value '=' expr ';'
   23     | compound_stmt
   24     | func_call ';'
   25     | "if" '(' cond ')' stmt
   26     | "if" '(' cond ')' stmt "else" stmt
   27     | "while" '(' cond ')' stmt
   28     | "return" ';'
   29     | "return" expr ';'

   30 compound_stmt: '{' stmt_help '}'

   31 stmt_help: %empty
   32          | stmt stmt_help

   33 func_call: T_id '(' ')'
   34          | T_id '(' expr_list ')'

   35 expr_list: expr expr_list_help

   36 expr_list_help: %empty
   37               | ',' expr expr_list_help

   38 expr: T_INT_CONST
   39     | T_CHAR_CONST
   40     | l_value
   41     | '(' expr ')'
   42     | func_call
   43     | '+' expr
   44     | '-' expr
   45     | expr '+' expr
   46     | expr '-' expr
   47     | expr '*' expr
   48     | expr '/' expr
   49     | expr '%' expr

   50 l_value: T_id
   51        | T_id '[' expr ']'
   52        | T_STRING

   53 cond: "true"
   54     | "false"
   55     | '(' cond ')'
   56     | '!' cond
   57     | expr "==" expr
   58     | expr "!=" expr
   59     | expr '<' expr
   60     | expr '>' expr
   61     | expr "<=" expr
   62     | expr ">=" expr
   63     | cond '&' cond
   64     | cond '|' cond


Terminals, with rules where they appear

$end (0) 0
'!' (33) 56
'%' (37) 49
'&' (38) 63
'(' (40) 2 3 25 26 27 33 34 41 55
')' (41) 2 3 25 26 27 33 34 41 55
'*' (42) 47
'+' (43) 43 45
',' (44) 8 37
'-' (45) 44 46
'/' (47) 48
':' (58) 2 3 9 10
';' (59) 21 22 24 28 29
'<' (60) 59
'=' (61) 22
'>' (62) 60
'[' (91) 14 20 51
']' (93) 14 20 51
'{' (123) 30
'|' (124) 64
'}' (125) 30
error (256)
TINT (258) 11
TBYTE (259) 12
TREFERENCE (260) 10
TW_INT (261)
TW_BYTE (262)
TW_CHAR (263)
TW_STRING (264)
TR_INT (265)
TR_BYTE (266)
TR_CHAR (267)
TR_STRING (268)
T_EXNTEND (269)
T_SHRINK (270)
T_STRLEN (271)
T_STRCMP (272)
T_STRCPY (273)
T_STRCAT (274)
"if" (275) 25 26
"else" (276) 26
"while" (277) 27
"return" (278) 28 29
"proc" (279) 16
"print" (280)
"true" (281) 53
"false" (282) 54
"==" (283) 57
"!=" (284) 58
"<=" (285) 61
">=" (286) 62
T_id (287) 2 3 9 10 19 20 33 34 50 51
T_INT_CONST (288) 20 38
T_CHAR_CONST (289) 39
T_STRING (290) 52
UPLUS (291)
UMINUS (292)
IF_PART (293)
NO_ELSE (294)
":" (295) 19 20


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
program (62)
    on left: 1, on right: 0
func_def (63)
    on left: 2 3, on right: 1 17
local_def_help (64)
    on left: 4 5, on right: 2 3 5
fpar_list (65)
    on left: 6, on right: 3
fpar_def_help (66)
    on left: 7 8, on right: 6 8
fpar_def (67)
    on left: 9 10, on right: 6 8
data_type (68)
    on left: 11 12, on right: 13 14 15 19 20
type (69)
    on left: 13 14, on right: 9 10
r_type (70)
    on left: 15 16, on right: 2 3
local_def (71)
    on left: 17 18, on right: 5
var_def (72)
    on left: 19 20, on right: 18
stmt (73)
    on left: 21 22 23 24 25 26 27 28 29, on right: 25 26 27 32
compound_stmt (74)
    on left: 30, on right: 2 3 23
stmt_help (75)
    on left: 31 32, on right: 30 32
func_call (76)
    on left: 33 34, on right: 24 42
expr_list (77)
    on left: 35, on right: 34
expr_list_help (78)
    on left: 36 37, on right: 35 37
expr (79)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49, on right: 22 29 35
    37 41 43 44 45 46 47 48 49 51 57 58 59 60 61 62
l_value (80)
    on left: 50 51 52, on right: 22 40
cond (81)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64, on right: 25 26 27
    55 56 63 64


State 0

    0 $accept: . program $end

    T_id  shift, and go to state 1

    program   go to state 2
    func_def  go to state 3


State 1

    2 func_def: T_id . '(' ')' ':' r_type local_def_help compound_stmt
    3         | T_id . '(' fpar_list ')' ':' r_type local_def_help compound_stmt

    '('  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: func_def .

    $default  reduce using rule 1 (program)


State 4

    2 func_def: T_id '(' . ')' ':' r_type local_def_help compound_stmt
    3         | T_id '(' . fpar_list ')' ':' r_type local_def_help compound_stmt

    T_id  shift, and go to state 6
    ')'   shift, and go to state 7

    fpar_list  go to state 8
    fpar_def   go to state 9


State 5

    0 $accept: program $end .

    $default  accept


State 6

    9 fpar_def: T_id . ':' type
   10         | T_id . ':' TREFERENCE type

    ':'  shift, and go to state 10


State 7

    2 func_def: T_id '(' ')' . ':' r_type local_def_help compound_stmt

    ':'  shift, and go to state 11


State 8

    3 func_def: T_id '(' fpar_list . ')' ':' r_type local_def_help compound_stmt

    ')'  shift, and go to state 12


State 9

    6 fpar_list: fpar_def . fpar_def_help

    ','  shift, and go to state 13

    $default  reduce using rule 7 (fpar_def_help)

    fpar_def_help  go to state 14


State 10

    9 fpar_def: T_id ':' . type
   10         | T_id ':' . TREFERENCE type

    TINT        shift, and go to state 15
    TBYTE       shift, and go to state 16
    TREFERENCE  shift, and go to state 17

    data_type  go to state 18
    type       go to state 19


State 11

    2 func_def: T_id '(' ')' ':' . r_type local_def_help compound_stmt

    TINT    shift, and go to state 15
    TBYTE   shift, and go to state 16
    "proc"  shift, and go to state 20

    data_type  go to state 21
    r_type     go to state 22


State 12

    3 func_def: T_id '(' fpar_list ')' . ':' r_type local_def_help compound_stmt

    ':'  shift, and go to state 23


State 13

    8 fpar_def_help: ',' . fpar_def fpar_def_help

    T_id  shift, and go to state 6

    fpar_def  go to state 24


State 14

    6 fpar_list: fpar_def fpar_def_help .

    $default  reduce using rule 6 (fpar_list)


State 15

   11 data_type: TINT .

    $default  reduce using rule 11 (data_type)


State 16

   12 data_type: TBYTE .

    $default  reduce using rule 12 (data_type)


State 17

   10 fpar_def: T_id ':' TREFERENCE . type

    TINT   shift, and go to state 15
    TBYTE  shift, and go to state 16

    data_type  go to state 18
    type       go to state 25


State 18

   13 type: data_type .
   14     | data_type . '[' ']'

    '['  shift, and go to state 26

    $default  reduce using rule 13 (type)


State 19

    9 fpar_def: T_id ':' type .

    $default  reduce using rule 9 (fpar_def)


State 20

   16 r_type: "proc" .

    $default  reduce using rule 16 (r_type)


State 21

   15 r_type: data_type .

    $default  reduce using rule 15 (r_type)


State 22

    2 func_def: T_id '(' ')' ':' r_type . local_def_help compound_stmt

    $default  reduce using rule 4 (local_def_help)

    local_def_help  go to state 27


State 23

    3 func_def: T_id '(' fpar_list ')' ':' . r_type local_def_help compound_stmt

    TINT    shift, and go to state 15
    TBYTE   shift, and go to state 16
    "proc"  shift, and go to state 20

    data_type  go to state 21
    r_type     go to state 28


State 24

    8 fpar_def_help: ',' fpar_def . fpar_def_help

    ','  shift, and go to state 13

    $default  reduce using rule 7 (fpar_def_help)

    fpar_def_help  go to state 29


State 25

   10 fpar_def: T_id ':' TREFERENCE type .

    $default  reduce using rule 10 (fpar_def)


State 26

   14 type: data_type '[' . ']'

    ']'  shift, and go to state 30


State 27

    2 func_def: T_id '(' ')' ':' r_type local_def_help . compound_stmt
    5 local_def_help: local_def_help . local_def

    T_id  shift, and go to state 31
    '{'   shift, and go to state 32

    func_def       go to state 33
    local_def      go to state 34
    var_def        go to state 35
    compound_stmt  go to state 36


State 28

    3 func_def: T_id '(' fpar_list ')' ':' r_type . local_def_help compound_stmt

    $default  reduce using rule 4 (local_def_help)

    local_def_help  go to state 37


State 29

    8 fpar_def_help: ',' fpar_def fpar_def_help .

    $default  reduce using rule 8 (fpar_def_help)


State 30

   14 type: data_type '[' ']' .

    $default  reduce using rule 14 (type)


State 31

    2 func_def: T_id . '(' ')' ':' r_type local_def_help compound_stmt
    3         | T_id . '(' fpar_list ')' ':' r_type local_def_help compound_stmt
   19 var_def: T_id . ":" data_type
   20        | T_id . ":" data_type '[' T_INT_CONST ']'

    '('  shift, and go to state 4
    ":"  shift, and go to state 38


State 32

   30 compound_stmt: '{' . stmt_help '}'

    "if"      shift, and go to state 39
    "while"   shift, and go to state 40
    "return"  shift, and go to state 41
    T_id      shift, and go to state 42
    T_STRING  shift, and go to state 43
    ';'       shift, and go to state 44
    '{'       shift, and go to state 32

    $default  reduce using rule 31 (stmt_help)

    stmt           go to state 45
    compound_stmt  go to state 46
    stmt_help      go to state 47
    func_call      go to state 48
    l_value        go to state 49


State 33

   17 local_def: func_def .

    $default  reduce using rule 17 (local_def)


State 34

    5 local_def_help: local_def_help local_def .

    $default  reduce using rule 5 (local_def_help)


State 35

   18 local_def: var_def .

    $default  reduce using rule 18 (local_def)


State 36

    2 func_def: T_id '(' ')' ':' r_type local_def_help compound_stmt .

    $default  reduce using rule 2 (func_def)


State 37

    3 func_def: T_id '(' fpar_list ')' ':' r_type local_def_help . compound_stmt
    5 local_def_help: local_def_help . local_def

    T_id  shift, and go to state 31
    '{'   shift, and go to state 32

    func_def       go to state 33
    local_def      go to state 34
    var_def        go to state 35
    compound_stmt  go to state 50


State 38

   19 var_def: T_id ":" . data_type
   20        | T_id ":" . data_type '[' T_INT_CONST ']'

    TINT   shift, and go to state 15
    TBYTE  shift, and go to state 16

    data_type  go to state 51


State 39

   25 stmt: "if" . '(' cond ')' stmt
   26     | "if" . '(' cond ')' stmt "else" stmt

    '('  shift, and go to state 52


State 40

   27 stmt: "while" . '(' cond ')' stmt

    '('  shift, and go to state 53


State 41

   28 stmt: "return" . ';'
   29     | "return" . expr ';'

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58
    ';'           shift, and go to state 59

    func_call  go to state 60
    expr       go to state 61
    l_value    go to state 62


State 42

   33 func_call: T_id . '(' ')'
   34          | T_id . '(' expr_list ')'
   50 l_value: T_id .
   51        | T_id . '[' expr ']'

    '('  shift, and go to state 63
    '['  shift, and go to state 64

    $default  reduce using rule 50 (l_value)


State 43

   52 l_value: T_STRING .

    $default  reduce using rule 52 (l_value)


State 44

   21 stmt: ';' .

    $default  reduce using rule 21 (stmt)


State 45

   32 stmt_help: stmt . stmt_help

    "if"      shift, and go to state 39
    "while"   shift, and go to state 40
    "return"  shift, and go to state 41
    T_id      shift, and go to state 42
    T_STRING  shift, and go to state 43
    ';'       shift, and go to state 44
    '{'       shift, and go to state 32

    $default  reduce using rule 31 (stmt_help)

    stmt           go to state 45
    compound_stmt  go to state 46
    stmt_help      go to state 65
    func_call      go to state 48
    l_value        go to state 49


State 46

   23 stmt: compound_stmt .

    $default  reduce using rule 23 (stmt)


State 47

   30 compound_stmt: '{' stmt_help . '}'

    '}'  shift, and go to state 66


State 48

   24 stmt: func_call . ';'

    ';'  shift, and go to state 67


State 49

   22 stmt: l_value . '=' expr ';'

    '='  shift, and go to state 68


State 50

    3 func_def: T_id '(' fpar_list ')' ':' r_type local_def_help compound_stmt .

    $default  reduce using rule 3 (func_def)


State 51

   19 var_def: T_id ":" data_type .
   20        | T_id ":" data_type . '[' T_INT_CONST ']'

    '['  shift, and go to state 69

    $default  reduce using rule 19 (var_def)


State 52

   25 stmt: "if" '(' . cond ')' stmt
   26     | "if" '(' . cond ')' stmt "else" stmt

    "true"        shift, and go to state 70
    "false"       shift, and go to state 71
    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '!'           shift, and go to state 72
    '('           shift, and go to state 73

    func_call  go to state 60
    expr       go to state 74
    l_value    go to state 62
    cond       go to state 75


State 53

   27 stmt: "while" '(' . cond ')' stmt

    "true"        shift, and go to state 70
    "false"       shift, and go to state 71
    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '!'           shift, and go to state 72
    '('           shift, and go to state 73

    func_call  go to state 60
    expr       go to state 74
    l_value    go to state 62
    cond       go to state 76


State 54

   38 expr: T_INT_CONST .

    $default  reduce using rule 38 (expr)


State 55

   39 expr: T_CHAR_CONST .

    $default  reduce using rule 39 (expr)


State 56

   43 expr: '+' . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 77
    l_value    go to state 62


State 57

   44 expr: '-' . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 78
    l_value    go to state 62


State 58

   41 expr: '(' . expr ')'

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 79
    l_value    go to state 62


State 59

   28 stmt: "return" ';' .

    $default  reduce using rule 28 (stmt)


State 60

   42 expr: func_call .

    $default  reduce using rule 42 (expr)


State 61

   29 stmt: "return" expr . ';'
   45 expr: expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr

    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '%'  shift, and go to state 84
    ';'  shift, and go to state 85


State 62

   40 expr: l_value .

    $default  reduce using rule 40 (expr)


State 63

   33 func_call: T_id '(' . ')'
   34          | T_id '(' . expr_list ')'

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58
    ')'           shift, and go to state 86

    func_call  go to state 60
    expr_list  go to state 87
    expr       go to state 88
    l_value    go to state 62


State 64

   51 l_value: T_id '[' . expr ']'

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 89
    l_value    go to state 62


State 65

   32 stmt_help: stmt stmt_help .

    $default  reduce using rule 32 (stmt_help)


State 66

   30 compound_stmt: '{' stmt_help '}' .

    $default  reduce using rule 30 (compound_stmt)


State 67

   24 stmt: func_call ';' .

    $default  reduce using rule 24 (stmt)


State 68

   22 stmt: l_value '=' . expr ';'

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 90
    l_value    go to state 62


State 69

   20 var_def: T_id ":" data_type '[' . T_INT_CONST ']'

    T_INT_CONST  shift, and go to state 91


State 70

   53 cond: "true" .

    $default  reduce using rule 53 (cond)


State 71

   54 cond: "false" .

    $default  reduce using rule 54 (cond)


State 72

   56 cond: '!' . cond

    "true"        shift, and go to state 70
    "false"       shift, and go to state 71
    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '!'           shift, and go to state 72
    '('           shift, and go to state 73

    func_call  go to state 60
    expr       go to state 74
    l_value    go to state 62
    cond       go to state 92


State 73

   41 expr: '(' . expr ')'
   55 cond: '(' . cond ')'

    "true"        shift, and go to state 70
    "false"       shift, and go to state 71
    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '!'           shift, and go to state 72
    '('           shift, and go to state 73

    func_call  go to state 60
    expr       go to state 93
    l_value    go to state 62
    cond       go to state 94


State 74

   45 expr: expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr
   57 cond: expr . "==" expr
   58     | expr . "!=" expr
   59     | expr . '<' expr
   60     | expr . '>' expr
   61     | expr . "<=" expr
   62     | expr . ">=" expr

    "=="  shift, and go to state 95
    "!="  shift, and go to state 96
    "<="  shift, and go to state 97
    ">="  shift, and go to state 98
    '<'   shift, and go to state 99
    '>'   shift, and go to state 100
    '+'   shift, and go to state 80
    '-'   shift, and go to state 81
    '*'   shift, and go to state 82
    '/'   shift, and go to state 83
    '%'   shift, and go to state 84


State 75

   25 stmt: "if" '(' cond . ')' stmt
   26     | "if" '(' cond . ')' stmt "else" stmt
   63 cond: cond . '&' cond
   64     | cond . '|' cond

    '|'  shift, and go to state 101
    '&'  shift, and go to state 102
    ')'  shift, and go to state 103


State 76

   27 stmt: "while" '(' cond . ')' stmt
   63 cond: cond . '&' cond
   64     | cond . '|' cond

    '|'  shift, and go to state 101
    '&'  shift, and go to state 102
    ')'  shift, and go to state 104


State 77

   43 expr: '+' expr .
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr

    $default  reduce using rule 43 (expr)


State 78

   44 expr: '-' expr .
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr

    $default  reduce using rule 44 (expr)


State 79

   41 expr: '(' expr . ')'
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr

    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '%'  shift, and go to state 84
    ')'  shift, and go to state 105


State 80

   45 expr: expr '+' . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 106
    l_value    go to state 62


State 81

   46 expr: expr '-' . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 107
    l_value    go to state 62


State 82

   47 expr: expr '*' . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 108
    l_value    go to state 62


State 83

   48 expr: expr '/' . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 109
    l_value    go to state 62


State 84

   49 expr: expr '%' . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 110
    l_value    go to state 62


State 85

   29 stmt: "return" expr ';' .

    $default  reduce using rule 29 (stmt)


State 86

   33 func_call: T_id '(' ')' .

    $default  reduce using rule 33 (func_call)


State 87

   34 func_call: T_id '(' expr_list . ')'

    ')'  shift, and go to state 111


State 88

   35 expr_list: expr . expr_list_help
   45 expr: expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr

    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '%'  shift, and go to state 84
    ','  shift, and go to state 112

    $default  reduce using rule 36 (expr_list_help)

    expr_list_help  go to state 113


State 89

   45 expr: expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr
   51 l_value: T_id '[' expr . ']'

    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '%'  shift, and go to state 84
    ']'  shift, and go to state 114


State 90

   22 stmt: l_value '=' expr . ';'
   45 expr: expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr

    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '%'  shift, and go to state 84
    ';'  shift, and go to state 115


State 91

   20 var_def: T_id ":" data_type '[' T_INT_CONST . ']'

    ']'  shift, and go to state 116


State 92

   56 cond: '!' cond .
   63     | cond . '&' cond
   64     | cond . '|' cond

    $default  reduce using rule 56 (cond)


State 93

   41 expr: '(' expr . ')'
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr
   57 cond: expr . "==" expr
   58     | expr . "!=" expr
   59     | expr . '<' expr
   60     | expr . '>' expr
   61     | expr . "<=" expr
   62     | expr . ">=" expr

    "=="  shift, and go to state 95
    "!="  shift, and go to state 96
    "<="  shift, and go to state 97
    ">="  shift, and go to state 98
    '<'   shift, and go to state 99
    '>'   shift, and go to state 100
    '+'   shift, and go to state 80
    '-'   shift, and go to state 81
    '*'   shift, and go to state 82
    '/'   shift, and go to state 83
    '%'   shift, and go to state 84
    ')'   shift, and go to state 105


State 94

   55 cond: '(' cond . ')'
   63     | cond . '&' cond
   64     | cond . '|' cond

    '|'  shift, and go to state 101
    '&'  shift, and go to state 102
    ')'  shift, and go to state 117


State 95

   57 cond: expr "==" . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 118
    l_value    go to state 62


State 96

   58 cond: expr "!=" . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 119
    l_value    go to state 62


State 97

   61 cond: expr "<=" . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 120
    l_value    go to state 62


State 98

   62 cond: expr ">=" . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 121
    l_value    go to state 62


State 99

   59 cond: expr '<' . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 122
    l_value    go to state 62


State 100

   60 cond: expr '>' . expr

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 123
    l_value    go to state 62


State 101

   64 cond: cond '|' . cond

    "true"        shift, and go to state 70
    "false"       shift, and go to state 71
    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '!'           shift, and go to state 72
    '('           shift, and go to state 73

    func_call  go to state 60
    expr       go to state 74
    l_value    go to state 62
    cond       go to state 124


State 102

   63 cond: cond '&' . cond

    "true"        shift, and go to state 70
    "false"       shift, and go to state 71
    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '!'           shift, and go to state 72
    '('           shift, and go to state 73

    func_call  go to state 60
    expr       go to state 74
    l_value    go to state 62
    cond       go to state 125


State 103

   25 stmt: "if" '(' cond ')' . stmt
   26     | "if" '(' cond ')' . stmt "else" stmt

    "if"      shift, and go to state 39
    "while"   shift, and go to state 40
    "return"  shift, and go to state 41
    T_id      shift, and go to state 42
    T_STRING  shift, and go to state 43
    ';'       shift, and go to state 44
    '{'       shift, and go to state 32

    stmt           go to state 126
    compound_stmt  go to state 46
    func_call      go to state 48
    l_value        go to state 49


State 104

   27 stmt: "while" '(' cond ')' . stmt

    "if"      shift, and go to state 39
    "while"   shift, and go to state 40
    "return"  shift, and go to state 41
    T_id      shift, and go to state 42
    T_STRING  shift, and go to state 43
    ';'       shift, and go to state 44
    '{'       shift, and go to state 32

    stmt           go to state 127
    compound_stmt  go to state 46
    func_call      go to state 48
    l_value        go to state 49


State 105

   41 expr: '(' expr ')' .

    $default  reduce using rule 41 (expr)


State 106

   45 expr: expr . '+' expr
   45     | expr '+' expr .
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr

    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '%'  shift, and go to state 84

    $default  reduce using rule 45 (expr)


State 107

   45 expr: expr . '+' expr
   46     | expr . '-' expr
   46     | expr '-' expr .
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr

    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '%'  shift, and go to state 84

    $default  reduce using rule 46 (expr)


State 108

   45 expr: expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   47     | expr '*' expr .
   48     | expr . '/' expr
   49     | expr . '%' expr

    $default  reduce using rule 47 (expr)


State 109

   45 expr: expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   48     | expr '/' expr .
   49     | expr . '%' expr

    $default  reduce using rule 48 (expr)


State 110

   45 expr: expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | expr . '%' expr
   49     | expr '%' expr .

    $default  reduce using rule 49 (expr)


State 111

   34 func_call: T_id '(' expr_list ')' .

    $default  reduce using rule 34 (func_call)


State 112

   37 expr_list_help: ',' . expr expr_list_help

    T_id          shift, and go to state 42
    T_INT_CONST   shift, and go to state 54
    T_CHAR_CONST  shift, and go to state 55
    T_STRING      shift, and go to state 43
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 128
    l_value    go to state 62


State 113

   35 expr_list: expr expr_list_help .

    $default  reduce using rule 35 (expr_list)


State 114

   51 l_value: T_id '[' expr ']' .

    $default  reduce using rule 51 (l_value)


State 115

   22 stmt: l_value '=' expr ';' .
